--- a/css/main.css
+++ b/css/main.css
@@ -1149,6 +1149,7 @@ h1, .h2 {
     margin-bottom: 38px;
     font-size: 18px;
     line-height: 24px;
+    font-weight: 700;
     color: #004996; }
   .footer__nav-list {
     margin: 0;
@@ -1240,8 +1241,8 @@ h1, .h2 {
     line-height: 36px;
     font-weight: 900; }
   .card__arrow {
-    width: 16px;
-    height: 32px; }
+    width: 22px;
+    height: 36px; }
   .card__bg-box {
     position: absolute;
     z-index: -1;
