feat: add Industries page

--- a/src/index.pug
+++ b/src/index.pug
@@ -26,7 +26,7 @@ block content
 				.card__title-box
 					p.card__title Fashion
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg1.jpg", alt)
 			// Card
@@ -34,7 +34,7 @@ block content
 				.card__title-box
 					p.card__title Healthcare
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg2.jpg", alt)
 			// Card
@@ -42,7 +42,7 @@ block content
 				.card__title-box
 					p.card__title Automotive
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg3.jpg", alt)
 			// Card
@@ -50,7 +50,7 @@ block content
 				.card__title-box
 					p.card__title FMCG
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg4.jpg", alt)
 			// Card
@@ -58,7 +58,7 @@ block content
 				.card__title-box
 					p.card__title Telecom
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg5.jpg", alt)
 			// Card
@@ -66,7 +66,7 @@ block content
 				.card__title-box
 					p.card__title POSM
 					+svg("chevron-right")(class="card__arrow")
-				span.button.button--white.button--xs Подробнее
+				span.button.button--white.button--xs.card__btn-more Подробнее
 				.card__bg-box
 					img.card__bg(src="images/section-ready/bg6.jpg", alt)
 
