--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -11,6 +11,7 @@
 @import "news-card";
 @import "news-row";
 @import "tabs";
+@import "blocks/breadcrumb";
 
 @import "section-ready";
 @import "section-nav";
@@ -18,3 +19,5 @@
 @import "section-partner";
 @import "section-contacts";
 @import "section-news";
+@import "sections/section-industries";
+@import "sections/section-invite";
