--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,11 +7,23 @@
 	color: $color-white;
 	overflow: hidden;
 
+	&--text-top {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		padding-top: 70px;
+		padding-bottom: 49px;
+	}
+
 	&__title-box {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		margin-bottom: 35px;
+
+		.card--text-top & {
+			margin-top: auto;
+		}
 	}
 
 	&__title {
@@ -61,5 +73,40 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+
+	&__text-box {
+		margin-bottom: 74px;
+		font-size: 16px;
+		line-height: 18px;
+		font-weight: 500;
+		opacity: 0;
+		transform: translateX(-20px);
+		transition: opacity $transition-default, transform $transition-default;
+
+		.card:hover & {
+			opacity: 1;
+			transform: none;
+		}
+	}
+
+	&__text {
+		margin: 0;
+
+		&:not(:last-child) {
+			margin-bottom: 10px;
+		}
+	}
+
+	&__btn-more {
+		transition: transform $transition-default;
+		
+		.card--text-top & {
+			width: 100%;
+			max-width: 140px;
+		}
+		.card--text-top:hover & {
+			transform: translateY(-7px);
+		}
 	}
 }
