feat: add Industry page

--- a/src/index.pug
+++ b/src/index.pug
@@ -236,11 +236,11 @@ block content
 			h2.h2.text-blue.section-contacts__title Есть вопросы? Свяжитесь с нами!
 			form.section-contacts__form
 				.section-contacts__form-row
-					.section-contacts__form-col
+					.section-contacts__form-col.section-contacts__form-col--inputs
 						input.form-control.section-contacts__form-input(type="text", placeholder="Имя")
 						input.form-control.section-contacts__form-input(type="tel", placeholder="*Телефон")
 						input.form-control.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
-					.section-contacts__form-col
+					.section-contacts__form-col.section-contacts__form-col--message
 						textarea.form-control.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
 				.section-contacts__form-submit-box
 					button.button.button--blue.button--lg.section-contacts__form-submit Отправить
