--- a/src/pug/mixins/breadcrumbs.pug
+++ b/src/pug/mixins/breadcrumbs.pug
@@ -4,7 +4,7 @@
 
 mixin breadcrumb(items, last)
 	// Breadcrumbs
-	.breadcrumb.container&attributes(attributes)
+	.breadcrumb&attributes(attributes)
 		ul.breadcrumb__list
 			each item in items
 				li.breadcrumb__item
