--- a/src/scss/components/_form-control.scss
+++ b/src/scss/components/_form-control.scss
@@ -8,6 +8,12 @@
 	background-color: $color-white;
 	transition: background-color $transition-default;
 
+	&--round {
+		border: none;
+		border-radius: 50px;
+		padding: 25px 32px;
+	}
+
 	&::placeholder {
 		color: #7A797A;
 	}
@@ -19,5 +25,9 @@
 
 	&--textarea {
 		resize: none;
+
+		&.form-control--round {
+			padding: 28px 44px;
+		}
 	}
 }
