--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -12,6 +12,7 @@
 @import "news-row";
 @import "tabs";
 @import "blocks/breadcrumb";
+@import "blocks/list-arrow";
 
 @import "section-ready";
 @import "section-nav";
@@ -21,3 +22,9 @@
 @import "section-news";
 @import "sections/section-industries";
 @import "sections/section-invite";
+@import "sections/section-hero";
+@import "sections/section-results";
+@import "sections/section-advantages";
+@import "sections/section-request";
+@import "sections/section-description";
+@import "sections/section-slider";
