--- a/src/scss/components/_section-contacts.scss
+++ b/src/scss/components/_section-contacts.scss
@@ -1,17 +1,44 @@
 .section-contacts {
+	position: relative;
+	z-index: 0;
 	padding-top: 78px;
 	padding-bottom: 87px;
 	background-color: #E4EDF3;
-	background-image: url("../images/section-contacts/bg.jpg");
+	background-image: url("../images/section-contacts/bg.jpg") ;
 	background-repeat: no-repeat;
 	background-size: 50% auto;
 	background-position: right top;
 	overflow: hidden;
 
+	&::before {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(90deg, #E4EDF3 53%, rgba(#fff, 0) 100%);
+		content: "";
+	}
+
+	&--blue {
+		padding-top: 96px;
+		background-color: $color-blue;
+
+		&::before {
+			background: linear-gradient(90deg, $color-blue 53%, rgba(#fff, 0) 100%);
+		}
+	}
+
 	&__title {
 		margin-top: 0;
 		margin-bottom: 71px;
 		text-align: center;
+
+		.section-contacts--blue & {
+			font-size: 32px;
+			line-height: 48px;
+		}
 	}
 
 	&__form {
@@ -27,7 +54,16 @@
 
 	&__form-col {
 		width: 100%;
+		max-width: 45%;
 		padding: 0 20px;
+
+		&--inputs {
+			max-width: 45%;
+		}
+
+		&--message {
+			max-width: 55%;
+		}
 	}
 
 	&__form-input {
@@ -36,6 +72,12 @@
 
 		&:not(:last-child) {
 			margin-bottom: 23px;
+		}
+
+		.section-contacts--blue & {
+			&:not(:last-child) {
+				margin-bottom: 30px;
+			}
 		}
 	}
 
