--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -2,14 +2,25 @@
 	overflow: hidden;
 
 	&__nav-list {
-		display: flex;
+		display: inline-flex;
 		margin: 0 -18px;
 		padding-left: 0;
 		list-style-type: none;
+
+		.tabs--simple & {
+			margin: 0 0 44px;
+			padding: 32px 28px 28px;
+			background-color: $color-white;
+			border-radius: 25px;
+		}
 	}
 
 	&__nav-elem {
 		padding: 0 18px;
+
+		.tabs--simple & {
+			padding: 0 16px;
+		}
 	}
 
 	&__nav-button {
@@ -24,6 +35,15 @@
 		color: #7A797A;
 		text-align: center;
 		transition: font-weight $transition-default, color $transition-default;
+
+		.tabs--simple & {
+			padding-bottom: 17px;
+			font-family: $font-primary;
+			font-size: 18px;
+			line-height: 1;
+			font-weight: 500;
+			color: #707070;
+		}
 
 		&::after {
 			position: absolute;
@@ -43,6 +63,7 @@
 		&:hover,
 		&--active {
 			color: $color-blue;
+
 			&::after {
 				opacity: 1;
 				transform: translateX(-50%) scaleX(1);
@@ -51,6 +72,18 @@
 
 		&--active {
 			font-weight: 700;
+		}
+
+		.tabs--simple & {
+			&::after {
+				max-width: 100%;
+				height: 3px;
+			}
+
+			&:hover,
+			&--active {
+				color: $color-blue;
+			}
 		}
 	}
 
