feat: add 404 page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -28,3 +28,4 @@
 @import "sections/section-request";
 @import "sections/section-description";
 @import "sections/section-slider";
+@import "sections/section-404";
