--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,25 +1,25 @@
-@import "header";
-@import "search-form";
-@import "dropdown";
-@import "button";
-@import "footer";
-@import "social";
-@import "card";
-@import "nav-list";
-@import "slider";
-@import "form-control";
-@import "news-card";
-@import "news-row";
-@import "tabs";
+@import "blocks/header";
+@import "blocks/search-form";
+@import "blocks/dropdown";
+@import "blocks/button";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/card";
+@import "blocks/nav-list";
+@import "blocks/slider";
+@import "blocks/form-control";
+@import "blocks/news-card";
+@import "blocks/news-row";
+@import "blocks/tabs";
 @import "blocks/breadcrumb";
 @import "blocks/list-arrow";
 
-@import "section-ready";
-@import "section-nav";
-@import "section-services";
-@import "section-partner";
-@import "section-contacts";
-@import "section-news";
+@import "sections/section-ready";
+@import "sections/section-nav";
+@import "sections/section-services";
+@import "sections/section-partner";
+@import "sections/section-contacts";
+@import "sections/section-news";
 @import "sections/section-industries";
 @import "sections/section-invite";
 @import "sections/section-hero";
