feat: add Press list page

--- a/src/index.pug
+++ b/src/index.pug
@@ -191,21 +191,27 @@ block content
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений
+											br
+											| на 06 октября
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news2.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений
+											br
+											| на 06 октября
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news3.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений
+											br
+											| на 06 октября
 					// Content
 					.tabs__content#content2
 						.news-row
@@ -215,21 +221,21 @@ block content
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений на 06 октября
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений на 06 октября
 							// News
 							.news-row__card-box
 								a.news-card(href="#")
 									img.news-card__img(src="images/common/news1.jpg", alt)
 									.news-card__content-box
 										time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-										p.news-card__title Логистика в период ограничений на 06 октября
+										p.news-card__title Логистика в период ограничений на 06 октября
 	// Section Contacts
 	section.section-contacts
 		.container
