--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -22,4 +22,6 @@ block content
 				a(href="industry.html", target="_blank") Карточка индустрии
 			li.list-arrow__elem
 				a(href="404.html", target="_blank") 404
+			li.list-arrow__elem
+				a(href="press-list.html", target="_blank") Пресс-релизы
 
