--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -29,3 +29,4 @@
 @import "sections/section-description";
 @import "sections/section-slider";
 @import "sections/section-404";
+@import "sections/section-press-list";
