--- a/src/scss/components/blocks/_button.scss
+++ b/src/scss/components/blocks/_button.scss
@@ -70,6 +70,12 @@
 			padding-top: 19px;
 			padding-bottom: 19px;
 		}
+
+		&.button--text-big {
+			font-size: 18px;
+			padding-top: 19px;
+			padding-bottom: 19px;
+		}
 	}
 
 	&--sm {
