--- a/src/scss/components/blocks/_form-control.scss
+++ b/src/scss/components/blocks/_form-control.scss
@@ -14,6 +14,13 @@
 		padding: 25px 32px;
 	}
 
+	&--gray {
+		padding-top: 15px;
+		padding-bottom: 15px;
+		border-color: #e2e2e2;
+		border-radius: 40px;
+	}
+
 	&::placeholder {
 		color: #7A797A;
 	}
