--- a/src/press-list.pug
+++ b/src/press-list.pug
@@ -18,7 +18,7 @@ block content
 		.section-press-list__title-box
 			h1.h2.text-blue.section-press-list__title Пресс-релизы
 			.section-press-list__nav
-				a.section-press-list__year(href="#") 2022
+				a.section-press-list__year.section-press-list__year--active(href="#") 2022
 				a.section-press-list__year(href="#") 2021
 				a.section-press-list__year(href="#") 2020
 				input.form-control.form-control--gray.section-press-list__search(type="text", placeholder="Поиск по пресс-релизам...")
