--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -17,6 +17,7 @@
 @import "sections/section-ready";
 @import "sections/section-nav";
 @import "sections/section-services";
+@import "sections/section-slider-terminal";
 @import "sections/section-partner";
 @import "sections/section-contacts";
 @import "sections/section-news";
@@ -30,3 +31,5 @@
 @import "sections/section-slider";
 @import "sections/section-404";
 @import "sections/section-press-list";
+@import "sections/section-career";
+@import "sections/section-video-link";
