--- a/src/scss/components/blocks/_list-arrow.scss
+++ b/src/scss/components/blocks/_list-arrow.scss
@@ -42,5 +42,24 @@
 				background-image: url("data:image/svg+xml,%3Csvg width='12' height='20' viewBox='0 0 12 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 19L10 10L1 1' stroke='%23004996' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
 			}
 		}
+
+		.list-arrow--arrow-center & {
+			&::before {
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+
+		.list-arrow--blue-heavy & {
+			font-family: $font-secondary;
+			margin-bottom: 46px;
+			&::before {
+				width: 16px;
+				height: 24px;
+				background-image: url("data:image/svg+xml,%3Csvg width='16' height='24' viewBox='0 0 16 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 21L12 12L3 3' stroke='%23004996' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+			}
+		}
+
+
 	}
 }
