--- a/src/scss/components/sections/_section-hero.scss
+++ b/src/scss/components/sections/_section-hero.scss
@@ -15,6 +15,10 @@
 		content: "";
 	}
 
+	&--career {
+		padding-bottom: 83px;
+	}
+
 	&__bg {
 		position: absolute;
 		z-index: -2;
@@ -35,12 +39,38 @@
 		font-size: 50px;
 		line-height: 50px;
 		font-weight: 900;
+
+		.section-hero--career & {
+			margin-bottom: 47px;
+		}
 	}
 
 	&__text {
 		margin: 0;
 		font-size: 18px;
 		line-height: 18px;
+
+		.section-hero--career & {
+			margin-bottom: 54px;
+		}
 	}
 
+	&__job-search {
+	}
+
+	&__job-row {
+		display: grid;
+		grid-template-columns: 1fr 1fr 134px;
+		grid-column-gap: 32px;
+		width: 100%;
+		max-width: 978px;
+	}
+
+	&__job-label {
+		margin-top: 0;
+		margin-bottom: 34px;
+		font-size: 18px;
+		line-height: 18px;
+		font-weight: 700;
+	}
 }
