feat: add Career list page

--- a/src/career.pug
+++ b/src/career.pug
@@ -22,9 +22,9 @@ block content
 			p.section-hero__text Осуществление перевозки и оформления Карнета АТА выставочных макетов фюзеляжа
 				br
 				| дальнемагистрального бизнес-джета Bombardier
-			.section-hero__job-search
-				p.section-hero__job-label Поиск по вакансиям
-				form.section-hero__job-row
+			.section-hero__job-search.job-search
+				p.job-search__label Поиск по вакансиям
+				form.job-search__row
 					.dropdown
 						.dropdown__value-box
 							input.dropdown__value(type="text", value="Москва", disabled)
