--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -13,6 +13,7 @@
 @import "blocks/tabs";
 @import "blocks/breadcrumb";
 @import "blocks/list-arrow";
+@import "blocks/job-search";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
@@ -33,3 +34,4 @@
 @import "sections/section-press-list";
 @import "sections/section-career";
 @import "sections/section-video-link";
+@import "sections/section-vacancy";
