--- a/src/pug/components/svg-sprite.html
+++ b/src/pug/components/svg-sprite.html
@@ -26,6 +26,9 @@
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 24" id="chevron-list-blue">
+		<path d="M3 21L12 12L3 3" stroke="#004996" stroke-width="5" stroke-linecap="round"></path>
+	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 36" id="chevron-right">
 		<path d="M2 34L18 18L2 2" stroke="currentColor" stroke-width="4" stroke-linecap="round"></path>
 	</symbol>
@@ -34,6 +37,9 @@
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 24" id="chevron-slider">
 		<path d="M2.8 24L0 21.2L9.2 12L0 2.8L2.8 0L14.8 12L2.8 24Z" fill="currentColor"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="fire">
+		<path d="M16.5 8.00004C16.5 9.50004 16 11.5 13.6 12.3C14.3 10.6 14.4 8.90004 13.9 7.30004C13.2 5.20004 10.9 3.60004 9.3 2.70004C8.9 2.40004 8.2 2.80004 8.3 3.40004C8.3 4.50004 8 6.10004 6.3 7.80004C4.1 10 3 12.3 3 14.5C3 17.4 5 21 9 21C5 17 8 13.5 8 13.5C8.8 19.4 13 21 15 21C16.7 21 20 19.8 20 14.6C20 11.5 18.7 9.10004 17.6 7.70004C17.3 7.20004 16.6 7.50004 16.5 8.00004Z" fill="#E10000"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="flag-ru">
 		<path d="M0 9.375H24V14.625H0V9.375Z" fill="#1B75BB"></path>
