feat: add Career item page

--- a/src/career.pug
+++ b/src/career.pug
@@ -73,7 +73,7 @@ block content
 		.section-career__block
 			.section-career__block-col
 				h2.h2.text-blue.section-career__title Работать в Мэйджор Терминал — одно удовольствие
-				ul.list-arrow.list-arrow--blue-heavy.list-arrow--arrow-center.section-career__list
+				ul.list-arrow.list-arrow--blue-heavy.section-career__list
 					li.list-arrow__elem Карьерный и профессиональный рост
 						br
 						| (система наставничества и кадровый резерв)
@@ -86,7 +86,7 @@ block content
 		// Block
 		.section-career__block
 			.section-career__block-col
-				ul.list-arrow.list-arrow--blue-heavy.list-arrow--arrow-center.section-career__list
+				ul.list-arrow.list-arrow--blue-heavy.section-career__list
 					li.list-arrow__elem Корпоративные тарифы на сотовую связь;
 					li.list-arrow__elem Скидки на туристические поездки;
 					li.list-arrow__elem Юридическая помощь;
@@ -100,7 +100,7 @@ block content
 		// Block
 		.section-career__block
 			.section-career__block-col
-				ul.list-arrow.list-arrow--blue-heavy.list-arrow--arrow-center.section-career__list
+				ul.list-arrow.list-arrow--blue-heavy.section-career__list
 					li.list-arrow__elem Скидки на покупку и обслуживание автомобиля в дилерских центрах Major Auto
 					li.list-arrow__elem Возможность аренды автомобиля на корпоративных условиях;
 					li.list-arrow__elem Корпоративное питание
