--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -35,3 +35,4 @@
 @import "sections/section-career";
 @import "sections/section-video-link";
 @import "sections/section-vacancy";
+@import "sections/section-vacancy-item";
