feat: add Press item page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -36,3 +36,4 @@
 @import "sections/section-video-link";
 @import "sections/section-vacancy";
 @import "sections/section-vacancy-item";
+@import "sections/section-text";
