--- a/src/scss/components/blocks/_footer.scss
+++ b/src/scss/components/blocks/_footer.scss
@@ -112,7 +112,7 @@
 		transition: color $transition-default;
 
 		&:hover {
-			color: $color-blue;
+			color: $color-red;
 		}
 
 		&--mail {
@@ -123,7 +123,11 @@
 			margin-bottom: 20px;
 			font-size: 16px;
 			font-weight: 500;
-			color: rgba($color-blue, .5)
+			color: $color-blue;
+
+			&:hover {
+				color: $color-red;
+			}
 		}
 	}
 
