feat: update Page list page

--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -24,4 +24,13 @@ block content
 				a(href="404.html", target="_blank") 404
 			li.list-arrow__elem
 				a(href="press-list.html", target="_blank") Пресс-релизы
+			li.list-arrow__elem -----------------------------------
+			li.list-arrow__elem
+				a(href="press-item.html", target="_blank") Пресс-релиз
+			li.list-arrow__elem
+				a(href="career.html", target="_blank") Карьера
+			li.list-arrow__elem
+				a(href="career-list.html", target="_blank") Список вакансий
+			li.list-arrow__elem
+				a(href="career-item.html", target="_blank") Карточка вакансии
 
