fix: aside styles on Press item page

--- a/src/press-item.pug
+++ b/src/press-item.pug
@@ -48,31 +48,25 @@ block content
 			aside.news-row.news-row--col.section-text__aside
 				// News
 				.news-row__card-box
-					a.news-card.news-card--medium.news-card--radius-small(href="#")
-						img.news-card__img(src="images/common/news1.jpg", alt)
-						.news-card__content-box
-							time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-							p.news-card__title Логистика в период ограничений
-								br
-								| на 06 октября
-				// News
-				.news-row__card-box
-					a.news-card.news-card--medium.news-card--radius-small(href="#")
-						img.news-card__img(src="images/common/news2.jpg", alt)
-						.news-card__content-box
-							time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-							p.news-card__title Логистика в период ограничений
-								br
-								| на 06 октября
-				// News
-				.news-row__card-box
-					a.news-card.news-card--medium.news-card--radius-small(href="#")
+					a.news-card.news-card--small.news-card--radius-small(href="#")
 						img.news-card__img(src="images/common/news3.jpg", alt)
 						.news-card__content-box
 							time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
-							p.news-card__title Логистика в период ограничений
-								br
-								| на 06 октября
+							p.news-card__title Логистика в период ограничений на 06 октября
+				// News
+				.news-row__card-box
+					a.news-card.news-card--small.news-card--radius-small(href="#")
+						img.news-card__img(src="images/common/news3.jpg", alt)
+						.news-card__content-box
+							time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+							p.news-card__title Логистика в период ограничений на 06 октября
+				// News
+				.news-row__card-box
+					a.news-card.news-card--small.news-card--radius-small(href="#")
+						img.news-card__img(src="images/common/news3.jpg", alt)
+						.news-card__content-box
+							time.news-card__time(datetime="2022-09-06") 06 октября 2022 г.
+							p.news-card__title Логистика в период ограничений на 06 октября
 
 	// Section Contacts
 	section.section-contacts.section-contacts--blue
