tmp: add Department page html

--- a/src/industry.pug
+++ b/src/industry.pug
@@ -24,28 +24,28 @@ block content
 				br
 				| и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
 			img.section-hero__bg(src="images/section-hero/bg1.jpg", alt)
-	// Section Results
-	.section-results.container
-		.section-results__row
+	// Results
+	.results.container
+		.results__row
 			// Col
-			.section-results__col
-				p.section-results__value 5 млн
-				p.section-results__text Выгрузка (коробов) / год
+			.results__col
+				p.results__value 5 млн
+				p.results__text Выгрузка (коробов) / год
 			// Col
-			.section-results__col
-				p.section-results__value 100 млн
-				p.section-results__text Приемка (штук) / год
+			.results__col
+				p.results__value 100 млн
+				p.results__text Приемка (штук) / год
 			// Col
-			.section-results__col
-				p.section-results__value 400 тыс
-				p.section-results__text Восстановление качества
+			.results__col
+				p.results__value 400 тыс
+				p.results__text Восстановление качества
 					br
 					|(штук) / год
 			// Col
-			.section-results__col
-				p.section-results__value 15 млн
-				p.section-results__text Стикеров (штук) / год
-		a.button.button--blue.button--md.section-results__button Связаться с нами
+			.results__col
+				p.results__value 15 млн
+				p.results__text Стикеров (штук) / год
+		a.button.button--blue.button--md.results__button Связаться с нами
 	// Section Advantages
 	section.section-advantages.container
 		h2.h2.text-blue.section-advantages__title
