--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -14,6 +14,7 @@
 @import "blocks/breadcrumb";
 @import "blocks/list-arrow";
 @import "blocks/job-search";
+@import "blocks/results";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
@@ -25,7 +26,6 @@
 @import "sections/section-industries";
 @import "sections/section-invite";
 @import "sections/section-hero";
-@import "sections/section-results";
 @import "sections/section-advantages";
 @import "sections/section-request";
 @import "sections/section-description";
@@ -37,3 +37,4 @@
 @import "sections/section-vacancy";
 @import "sections/section-vacancy-item";
 @import "sections/section-text";
+@import "sections/section-actions";
