--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $color-gray: #eee;
 $color-blue: #004996;
 $color-blue-medium: #00539F;
 $color-blue-light: #2B6BCD;
+$color-blue-light2: #2B6BCD;
 
 $color-red: #E10000;
 
