--- a/src/scss/components/sections/_section-contacts.scss
+++ b/src/scss/components/sections/_section-contacts.scss
@@ -3,7 +3,7 @@
 	z-index: 0;
 	padding-top: 78px;
 	padding-bottom: 87px;
-	background-color: #E4EDF3;
+	background-color: $color-blue;
 	background-image: url("../images/section-contacts/bg.jpg");
 	background-repeat: no-repeat;
 	background-size: 50% auto;
@@ -17,17 +17,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: linear-gradient(90deg, #E4EDF3 53%, rgba(#fff, 0) 100%);
+		background: linear-gradient(90deg, $color-blue 53%, rgba(#fff, 0) 100%);
 		content: "";
-	}
-
-	&--blue {
-		padding-top: 96px;
-		background-color: $color-blue;
-
-		&::before {
-			background: linear-gradient(90deg, $color-blue 53%, rgba(#fff, 0) 100%);
-		}
 	}
 
 	&--job {
@@ -40,8 +31,8 @@
 		text-align: center;
 
 		.section-contacts--blue & {
-			font-size: 32px;
-			line-height: 48px;
+			//font-size: 32px;
+			//line-height: 48px;
 		}
 
 		.section-contacts--job & {
@@ -100,28 +91,47 @@
 	&__form-input {
 		display: block;
 		width: 100%;
-
-		&:not(:last-child) {
-			margin-bottom: 23px;
-		}
-
-		.section-contacts--blue & {
-			&:not(:last-child) {
-				margin-bottom: 30px;
-			}
-		}
-
-		.section-contacts--job & {
-			&:not(:last-child) {
-				margin-bottom: 24px;
-			}
-		}
 	}
 
 	&__form-textarea {
 		display: block;
 		width: 100%;
 		height: 100%;
+		border-radius: 25px;
+	}
+
+	&__input-box,
+	&__textarea-box {
+		position: relative;
+
+		&::after {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			background-color: $color-blue-light2;
+			border-radius: 10px 10px 25px 10px;
+			content: "";
+		}
+	}
+
+	&__input-box {
+		&:not(:last-child) {
+			margin-bottom: 23px;
+		}
+
+		&::after {
+			width: 16px;
+			height: 16px;
+		}
+	}
+
+	&__textarea-box {
+		height: 100%;
+
+		&::after {
+			width: 36px;
+			height: 36px;
+		}
 	}
 
 	&__form-submit-box {
