--- a/src/department.pug
+++ b/src/department.pug
@@ -20,7 +20,7 @@ block content
 			p.section-hero__text Многоуровневая система контроля и анализа деятельности
 			img.section-hero__bg(src="images/section-hero/bg1.jpg", alt)
 			// Results
-			.results.results--department
+			.results.results--white-line
 				.results__row
 					// Col
 					.results__col
@@ -86,18 +86,22 @@ block content
 			p.section-actions__text Регулярные опросы действующих клиентов о качестве сервиса
 
 	// Section Contacts
-	section.section-contacts.section-contacts--blue
+	section.section-contacts
 		.container
-			h2.text-white.section-contacts__title Есть вопросы? Свяжитесь с нами!
+			h2.h2.text-white.section-contacts__title Есть вопросы? Свяжитесь с нами!
 			form.section-contacts__form
 				.section-contacts__form-row
 					.section-contacts__form-col.section-contacts__form-col--inputs
-						input.form-control.form-control--round.section-contacts__form-input(type="text", placeholder="Имя")
-						input.form-control.form-control--round.section-contacts__form-input(type="tel", placeholder="*Телефон")
-						input.form-control.form-control--round.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="text", placeholder="Имя")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="tel", placeholder="*Телефон")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
 					.section-contacts__form-col.section-contacts__form-col--message
-						textarea.form-control.form-control--round.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
+						.section-contacts__textarea-box
+							textarea.form-control.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
 				.section-contacts__form-submit-box
-					button.button.button--outline-white.button--lg.section-contacts__form-submit Отправить
+					button.button.button--white.button--lg.section-contacts__form-submit Отправить
 
 
