--- a/src/industry.pug
+++ b/src/industry.pug
@@ -13,42 +13,42 @@ append vars
 
 block content
 	// Section Hero
-	section.section-hero
+	section.section-hero.section-hero--industry
 		.container
 			+breadcrumb(['Главная'], 'Индустрии')(class="section-hero__breadcrumb breadcrumb--white")
 			h1.section-hero__title
 				span.text-weight-light Индустрия
 				|
 				| Fashion
-			p.section-hero__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость
+			p.section-hero__text Major Terminal обладает богатым опытом работы с клиентами сектора Fashion.
 				br
-				| и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-			img.section-hero__bg(src="images/section-hero/bg1.jpg", alt)
-	// Results
-	.results.container
-		.results__row
-			// Col
-			.results__col
-				p.results__value 5 млн
-				p.results__text Выгрузка (коробов) / год
-			// Col
-			.results__col
-				p.results__value 100 млн
-				p.results__text Приемка (штук) / год
-			// Col
-			.results__col
-				p.results__value 400 тыс
-				p.results__text Восстановление качества
-					br
-					|(штук) / год
-			// Col
-			.results__col
-				p.results__value 15 млн
-				p.results__text Стикеров (штук) / год
-		a.button.button--blue.button--md.results__button Связаться с нами
-	// Section Advantages
-	section.section-advantages.container
-		h2.h2.text-blue.section-advantages__title
+				| Компания активно внедряет современные технологии в сфере логистики, особенно актуальные в данном сегменте.
+			img.section-hero__bg(src="images/section-hero/bg3.jpg", alt)
+			// Results
+			.results
+				.results__row
+					// Col
+					.results__col
+						p.results__value 5 млн
+						p.results__text Выгрузка (коробов) / год
+					// Col
+					.results__col
+						p.results__value 100 млн
+						p.results__text Приемка (штук) / год
+					// Col
+					.results__col
+						p.results__value 400 тыс
+						p.results__text Восстановление качества
+							br
+							|(штук) / год
+					// Col
+					.results__col
+						p.results__value 15 млн
+						p.results__text Стикеров (штук) / год
+				a.button.button--white.button--md.results__button Связаться с нами
+	// Section Request
+	section.section-request.container
+		h2.h2.text-blue.section-request__title
 			span.text-blue-light Учитываем
 			|
 			|
@@ -57,117 +57,166 @@ block content
 			| особенности
 			br
 			| индустрии Fashion
-		.section-advantages__grid
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Ярко выраженная сезонность
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Обширный справочник
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Срок оказания услуг
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Предпродажная подготовка
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Таможенный склад
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-			// Card
-			a.section-advantages__card(href="#")
-				.section-advantages__card-title-box
-					+svg("chevron-right")(class="section-advantages__card-arrow")
-					h3.section-advantages__card-title Срок оказания услуг
-				p.section-advantages__card-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков).
-	// Section Request
-	section.section-request.container
 		.section-request__row
-			.section-request__col
-				h2.h2.text-blue.section-request__title Все
-					|
-					|
-					span.text-blue-light складские услуги
-					br
-					| у одного оператора
-				.tabs.tabs--simple
-					ul.tabs__nav-list
-						li.tabs__nav-elem
-							button.tabs__nav-button.tabs__nav-button--active(data-content="content1") Сортировка
-						li.tabs__nav-elem
-							button.tabs__nav-button(data-content="content2") Склад
-						li.tabs__nav-elem
-							button.tabs__nav-button(data-content="content3") Доп.услуги
-						li.tabs__nav-elem
-							button.tabs__nav-button(data-content="content4") Дистрибуция
-					.tabs__content-box
-						// Content
-						.tabs__content.tabs__content--active#content1
+			// Link
+			a.section-request__link(href="#")
+				+svg("chevron-right")(class="section-request__link-arrow")
+				p.section-request__link-title Ярко выраженная сезонность
+			// Link
+			a.section-request__link(href="#")
+				+svg("chevron-right")(class="section-request__link-arrow")
+				p.section-request__link-title Предпродажная подготовка
+			// Link
+			a.section-request__link(href="#")
+				+svg("chevron-right")(class="section-request__link-arrow")
+				p.section-request__link-title Таможенный склад
+			// Link
+			a.section-request__link(href="#")
+				+svg("chevron-right")(class="section-request__link-arrow")
+				p.section-request__link-title Обширный справочник
+			// Link
+			a.section-request__link(href="#")
+				+svg("chevron-right")(class="section-request__link-arrow")
+				p.section-request__link-title Срок оказания услуг
+
+		// Tabs
+		.tabs.tabs--blue
+			ul.tabs__nav-list
+				li.tabs__nav-elem
+					button.tabs__nav-button.tabs__nav-button--active(data-content="content1") Сортировка
+				li.tabs__nav-elem
+					button.tabs__nav-button(data-content="content2") Склад
+				li.tabs__nav-elem
+					button.tabs__nav-button(data-content="content3") Доп.услуги
+				li.tabs__nav-elem
+					button.tabs__nav-button(data-content="content4") Дистрибуция
+			.tabs__content-box
+				// Content
+				.section-request__tab-content.section-request__tab-content--n1.tabs__content.tabs__content--active#content1
+					.section-request__content-row
+						.section-request__col
+							h2.h2.text-blue.section-request__content-title Все
+								|
+								|
+								span.text-blue-light складские услуги
+								br
+								| у одного оператора
 							ul.list-arrow.list-arrow--red.section-request__list
 								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
 								li.list-arrow__elem Переупаковка
 								li.list-arrow__elem Копакинг
 								li.list-arrow__elem Измерение МГХ
 							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						// Content
-						.tabs__content#content2
-							ul.list-arrow.list-arrow--red.section-request__list
-								li.list-arrow__elem Переупаковка
-								li.list-arrow__elem Копакинг
-								li.list-arrow__elem Измерение МГХ
+						.section-request__col
+							img.section-request__img(src="images/section-request/img.svg", alt)
+				// Content
+				.section-request__tab-content.section-request__tab-content--n2.tabs__content#content2
+					.section-request__content-row
+						.section-request__col
+							h2.h2.text-blue.section-request__title Возможности Major Terminal позволяют организовать
+								br
+								span.text-weight-light следующие типы хранения для индустрии
+								|
+								|
+								| Fashion
+							ul.list-arrow.list-arrow--two-col.list-arrow--red.section-request__list
+								li.list-arrow__elem Стеллажное
+								li.list-arrow__elem Полочное
+								li.list-arrow__elem Напольное
+								li.list-arrow__elem Вашельное
 							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						// Content
-						.tabs__content#content3
+						.section-request__col
+							img.section-request__img(src="images/section-request/img2.svg", alt)
+					// Content
+				.section-request__tab-content.tabs__content#content3
+					.section-request__content-row
+						.section-request__col
 							ul.list-arrow.list-arrow--red.section-request__list
 								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
 								li.list-arrow__elem Переупаковка
 								li.list-arrow__elem Измерение МГХ
 							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-						// Content
-						.tabs__content#content4
+						.section-request__col
+							img.section-request__img(src="images/section-request/img.svg", alt)
+					// Content
+				.section-request__tab-content.tabs__content#content4
+					.section-request__content-row
+						.section-request__col
 							ul.list-arrow.list-arrow--red.section-request__list
 								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
 								li.list-arrow__elem Переупаковка
 								li.list-arrow__elem Копакинг
 							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
-			.section-request__col
-				img.section-request__img(src="images/section-request/img.svg", alt)
+						.section-request__col
+							img.section-request__img(src="images/section-request/img.svg", alt)
 
 	// Section Description
 	.section-description.container
-		.section-description__grid
+		h2.h2.text-blue.section-description__title Опции и преимущества
+		.section-description__grid1
 			// Panel
-			article.section-description__panel
-				img.section-description__panel-img(src="images/section-description/img1.jpg", alt)
-				h2.section-description__panel-title Личный кабинет клиента
-				p.section-description__panel-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков). Зонирование товарных остатков по брендам, коллекциям, виду товара (одежда/ обувь/ аксессуары).
+			.section-description__panel.section-description__panel--with-blue-box
+				ul.section-description__list
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon1.png", alt)
+						| Доступ
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon5.png", alt)
+						| Документы
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon2.png", alt)
+						| Безопасность
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon6.png", alt)
+						| Отчеты
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon3.png", alt)
+						| Каталог
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon7.png", alt)
+						| Качество
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon4.png", alt)
+						| 24/7
+					li.section-description__list-elem
+						span.section-description__icon-box
+							img.section-description__icon(src="images/section-description/icon8.png", alt)
+						| Управление
+				.section-description__panel-row
+					.section-description__panel-blue-box
+						h3.section-description__panel-title Личный кабинет клиента
+						p.section-description__panel-text Управление и отчетность в едином личном кабинете
+							br
+							| с множеством полезных функций
+					img.section-description__panel-logo(src="images/section-description/logo.png", alt)
 			// Panel
-			article.section-description__panel
+			.section-description__panel.section-description__panel--with-image.section-description__panel--corner--bottom-right
 				img.section-description__panel-img(src="images/section-description/img2.jpg", alt)
-				h2.section-description__panel-title Легкая интеграция
-				p.section-description__panel-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков). Зонирование товарных остатков по брендам, коллекциям, виду товара (одежда/ обувь/ аксессуары).
+				.section-description__panel-content-box
+					h3.section-description__panel-title Интеграция с системами клиента
+					p.section-description__panel-text Система управления складом и транспортом, а также собственный департамент разработки помогут реализовать решение для автоматизации ваших уникальных процессов.
+		.section-description__grid2
 			// Panel
-			article.section-description__panel
-				h2.section-description__panel-title Служба качества
-				p.section-description__panel-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков). Зонирование товарных остатков по брендам, коллекциям, виду товара (одежда/ обувь/ аксессуары).
+			.section-description__panel.section-description__panel--corner--top-left
+				h3.section-description__panel-title Служба качества
+				p.section-description__panel-text Разработка стандартов качества, правил
+					br
+					| и инструкций компании
+				a.section-description__panel-link(href="#") Узнать подробнее
 			// Panel
-			article.section-description__panel
-				h2.section-description__panel-title Собственная WMS система
-				p.section-description__panel-text Собственная система управления складом (WMS) с расширенными возможностями по учету дополнительных параметров товара (более 30 признаков). Зонирование товарных остатков по брендам, коллекциям, виду товара (одежда/ обувь/ аксессуары).
+			.section-description__panel.section-description__panel--corner--top-right
+				h3.section-description__panel-title Интеграция с WMS системой
+				p.section-description__panel-text Система управления складом Major собственной разработки.
+					br
+					| Команда разработчиков и поддержки WMS в режиме 24/7.
+				a.section-description__panel-link(href="#") Узнать подробнее
 
 	// Section Slider
 	.section-slider
@@ -207,19 +256,25 @@ block content
 						button.slider__btn.slider__btn--next(aria-label="Вперед")
 							+svg("chevron-slider")(class="slider__btn-arrow")
 
+
 	// Section Contacts
-	section.section-contacts.section-contacts--blue
+	section.section-contacts
 		.container
-			h2.text-white.section-contacts__title Есть вопросы? Свяжитесь с нами!
+			h2.h2.text-white.section-contacts__title Есть вопросы? Свяжитесь с нами!
 			form.section-contacts__form
 				.section-contacts__form-row
 					.section-contacts__form-col.section-contacts__form-col--inputs
-						input.form-control.form-control--round.section-contacts__form-input(type="text", placeholder="Имя")
-						input.form-control.form-control--round.section-contacts__form-input(type="tel", placeholder="*Телефон")
-						input.form-control.form-control--round.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="text", placeholder="Имя")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="tel", placeholder="*Телефон")
+						.section-contacts__input-box
+							input.form-control.section-contacts__form-input(type="email", placeholder="*Адрес электронной почты")
 					.section-contacts__form-col.section-contacts__form-col--message
-						textarea.form-control.form-control--round.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
+						.section-contacts__textarea-box
+							textarea.form-control.form-control--textarea.section-contacts__form-textarea(placeholder="*Комментарий...")
 				.section-contacts__form-submit-box
-					button.button.button--outline-white.button--lg.section-contacts__form-submit Отправить
+					button.button.button--white.button--lg.section-contacts__form-submit Отправить
+
 
 
