--- a/src/scss/components/blocks/_list-arrow.scss
+++ b/src/scss/components/blocks/_list-arrow.scss
@@ -16,6 +16,14 @@
 		line-height: 24px;
 	}
 
+	&--two-col {
+		display: inline-grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: auto;
+		grid-column-gap: 24px;
+		grid-row-gap: 16px;
+	}
+
 	&__elem {
 		position: relative;
 		margin-bottom: 8px;
