--- a/src/scss/components/blocks/_tabs.scss
+++ b/src/scss/components/blocks/_tabs.scss
@@ -1,25 +1,53 @@
 .tabs {
 	overflow: hidden;
 
+	&--blue {
+		position: relative;
+		padding-bottom: 50px;
+
+		&::after {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			height: 5px;
+			background-color: #429EDD;
+			border-radius: 4px;
+			content: "";
+		}
+	}
+
 	&__nav-list {
 		display: inline-flex;
 		margin: 0 -18px;
 		padding-left: 0;
 		list-style-type: none;
 
-		.tabs--simple & {
-			margin: 0 0 44px;
-			padding: 32px 28px 28px;
-			background-color: $color-white;
-			border-radius: 25px;
+		.tabs--blue & {
+			position: relative;
+			display: flex;
+			width: 100%;
+			margin: 0;
+
+			&::after {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: 5px;
+				background-color: #429EDD;
+				border-radius: 5px;
+				content: "";
+			}
 		}
 	}
 
 	&__nav-elem {
 		padding: 0 18px;
 
-		.tabs--simple & {
-			padding: 0 16px;
+		.tabs--blue & {
+			flex-grow: 1;
+			padding: 0;
 		}
 	}
 
@@ -36,18 +64,9 @@
 		text-align: center;
 		transition: font-weight $transition-default, color $transition-default;
 
-		.tabs--simple & {
-			padding-bottom: 17px;
-			font-family: $font-primary;
-			font-size: 18px;
-			line-height: 1;
-			font-weight: 500;
-			color: #707070;
-		}
-
 		&::after {
 			position: absolute;
-			top: calc(100% - 4px);
+			bottom: 0;
 			left: 50%;
 			transform: translateX(-50%) scaleX(0);
 			width: 100%;
@@ -60,29 +79,55 @@
 			transition: opacity $transition-default, transform $transition-default;
 		}
 
-		&:hover,
-		&--active {
+		&:hover {
 			color: $color-blue;
-
-			&::after {
-				opacity: 1;
-				transform: translateX(-50%) scaleX(1);
-			}
 		}
 
 		&--active {
 			font-weight: 700;
+			color: $color-blue;
+
+			&::after {
+				transform: translateX(-50%) scaleX(1);
+				opacity: 1;
+			}
 		}
 
-		.tabs--simple & {
+		.tabs--blue & {
+			position: relative;
+			z-index: 1;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 100%;
+			padding: 20px 15px 39px;
+			font-family: $font-secondary;
+			font-size: 24px;
+			line-height: 1;
+			font-weight: 700;
+			letter-spacing: .01em;
+
 			&::after {
 				max-width: 100%;
-				height: 3px;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				opacity: 1;
+				transform: scaleX(0);
+				background-color: $color-blue;
+				height: 5px;
 			}
 
-			&:hover,
-			&--active {
+			&:hover {
 				color: $color-blue;
+			}
+
+			&--active {
+
+				&::after {
+					transform: scaleX(1);
+				}
 			}
 		}
 	}
@@ -95,8 +140,7 @@
 		display: none;
 		width: 100%;
 		opacity: 0;
-		transform: translateX(100vw);
-		transition: transform .4s ease, opacity $transition-default;
+		transition: opacity $transition-default;
 
 		&--active {
 			display: block;
@@ -109,12 +153,10 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			transform: translateX(100vw);
 		}
 
 		&--hide {
 			opacity: 0;
-			transform: translateX(-100vw);
 		}
 	}
 }
