--- a/src/scss/components/sections/_section-description.scss
+++ b/src/scss/components/sections/_section-description.scss
@@ -1,53 +1,179 @@
 .section-description {
-	padding-top: 56px;
+	padding-top: 63px;
 	padding-bottom: 50px;
 
-	&__grid {
+	&__title {
+		margin-top: 0;
+		margin-bottom: 84px;
+	}
+
+	&__grid1 {
 		display: grid;
-		grid-template-columns: 1fr 0.35fr 1fr;
+		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: auto;
-		grid-column-gap: 32px;
-		grid-row-gap: 41px;
+		grid-column-gap: 52px;
+		margin-bottom: 71px;
+	}
+
+	&__grid2 {
+		display: grid;
+		grid-template-columns: 1fr 1.45fr;
+		grid-template-rows: auto;
+		grid-column-gap: 34px;
 	}
 
 	&__panel {
+		position: relative;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		padding: 44px 70px 50px;
+		padding: 55px 70px 59px;
 		background-color: $color-white;
 		border-radius: 25px;
-		box-shadow: 0 4px 45px rgba(#D9E4EF, .25);
+		box-shadow: 0 4px 45px #D9E4EF;
 		text-align: center;
 
-		&:nth-child(4n-3) {
-			grid-column: 1/3;
+		&--with-blue-box {
+			align-items: stretch;
+			padding: 0;
 		}
-		&:nth-child(4n) {
-			 grid-column: 2/4;
-		 }
+
+		&--with-image {
+			flex-direction: row;
+		}
+
+		&::after {
+			position: absolute;
+			width: 36px;
+			height: 36px;
+			border-radius: 10px;
+			background-color: $color-blue;
+		}
+
+		&--corner--top-left {
+			&::after {
+				top: 0;
+				left: 0;
+				border-top-left-radius: 25px;
+				content: "";
+			}
+		}
+
+		&--corner--top-right {
+			&::after {
+				top: 0;
+				right: 0;
+				border-top-right-radius: 25px;
+				content: "";
+			}
+		}
+
+		&--corner--bottom-right {
+			&::after {
+				bottom: 0;
+				right: 0;
+				border-bottom-right-radius: 25px;
+				content: "";
+			}
+		}
 	}
 
 	&__panel-img {
 		max-width: 100%;
+		margin-right: 60px;
 	}
 
 	&__panel-title {
-		margin-top: 38px;
+		margin-top: 0;
 		margin-bottom: 17px;
 		font-family: $font-secondary;
 		font-size: 32px;
-		line-height: 50px;
+		line-height: 32px;
+		font-weight: 700;
+		color: $color-blue;
+
+		.section-description__panel-blue-box & {
+			margin-bottom: 21px;
+			color: $color-white;
+		}
+	}
+
+	&__panel-text {
+		margin-top: 0;
+		margin-bottom: 26px;
+		width: 100%;
+		max-width: 630px;
+		font-size: 18px;
+		line-height: 18px;
+
+		.section-description__panel-blue-box & {
+			margin-bottom: 0;
+			font-size: 14px;
+		}
+
+		.section-description__panel--with-image & {
+			margin-bottom: 0;
+		}
+	}
+
+	&__panel-link {
+		font-size: 14px;
+		line-height: 18px;
 		font-weight: 700;
 		color: $color-blue;
 	}
 
-	&__panel-text {
-		margin: 0;
+	&__list {
+		display: grid;
+		grid-template-columns: repeat(2, auto);
+		margin: 0 0 24px;
+		padding: 60px 46px 0;
+		list-style-type: none;
+		font-size: 28px;
+		line-height: 24px;
+		font-weight: 700;
+		color: $color-blue;
+	}
+
+	&__list-elem {
+		display: flex;
+		align-items: center;
+		margin-bottom: 16px;
+	}
+
+	&__icon-box {
+		display: block;
+		width: 58px;
+		height: 58px;
+		margin-right: 19px;
+	}
+
+	&__panel-row {
+		display: flex;
+		align-items: center;
 		width: 100%;
-		max-width: 630px;
-		font-size: 14px;
-		line-height: 18px;
+		margin-top: auto;
+	}
+
+	&__panel-blue-box {
+		max-width: 70%;
+		padding: 34px 60px 44px;
+		background-color: $color-blue;
+		border-radius: 25px;
+		color: $color-white;
+		flex-grow: 1;
+		text-align: left;
+	}
+
+	&__panel-logo {
+		display: block;
+		max-width: 100%;
+		margin: 0 auto;
+	}
+
+	&__panel-content-box {
+		flex-shrink: 0;
+		max-width: 220px;
 	}
 }
