--- a/src/scss/components/sections/_section-hero.scss
+++ b/src/scss/components/sections/_section-hero.scss
@@ -11,7 +11,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: linear-gradient(90deg, #00539F 50.02%, rgba(0, 83, 159, 0) 79.38%);
+		background: linear-gradient(90deg, #00539F 30%, rgba(0, 83, 159, 0) 79.38%);
 		content: "";
 	}
 
@@ -60,6 +60,13 @@
 		margin: 0;
 		font-size: 18px;
 		line-height: 18px;
+
+		.section-hero--industry & {
+			margin-bottom: 46px;
+			font-family: $font-secondary;
+			font-size: 24px;
+			line-height: 24px;
+		}
 
 		.section-hero--career & {
 			margin-bottom: 54px;
