--- a/src/scss/components/sections/_section-request.scss
+++ b/src/scss/components/sections/_section-request.scss
@@ -1,14 +1,62 @@
 .section-request {
-	padding-top: 82px;
+	padding-top: 74px;
 	padding-bottom: 40px;
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 67px;
+		margin-bottom: 64px;
 	}
 
 	&__row {
 		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -12px 98px;
+	}
+
+	&__link {
+		display: flex;
+		align-items: center;
+		margin: 0 12px;
+		padding: 24px 30px;
+		border-radius: 25px;
+		background-color: $color-white;
+		color: $color-black;
+		transition: background-color $transition-default, color $transition-default;
+
+		&:hover {
+			background-color: $color-blue;
+			color: $color-white;
+		}
+	}
+
+	&__link-title {
+		margin: 0;
+		font-size: 16px;
+		line-height: 24PX;
+		font-weight: 700;
+	}
+
+	&__link-arrow {
+		width: 12px;
+		height: 20px;
+		margin-right: 12px;
+		color: $color-blue;
+		transform: translateY(2px);
+		transition: color $transition-default;
+
+		.section-request__link:hover & {
+			color: $color-white;
+		}
+	}
+
+	&__tab-content {
+		padding-top: 110px;
+		padding-bottom: 40px;
+	}
+
+	&__content-row {
+		display: flex;
+		align-items: center;
 	}
 
 	&__col {
@@ -24,11 +72,17 @@
 	}
 
 	&__list {
-		margin-bottom: 55px;
+		margin-bottom: 62px;
 	}
 
 	&__button {
+		display: block;
 		width: 100%;
 		max-width: 244px;
+	}
+
+	&__content-title {
+		margin-top: 0;
+		margin-bottom: 49px;
 	}
 }
